Chore: module.css를 위한 postcss 및 rollup 플러그인 추가

--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "private": false,
   "scripts": {
     "build": "rollup -c",
+    "watch": "rollup -cw",
     "prepare": "husky"
   },
   "devDependencies": {
     "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-react": "^7.24.1",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
@@ -31,13 +34,18 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
+    "postcss": "^8.4.38",
     "prettier": "^2.8.6",
     "rollup": "^4.14.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "typescript": "^5.4.3"
   },
   "peerDependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.10"
   }
 }
