--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "private": false,
   "scripts": {
     "build": "rollup -c",
-    "watch": "rollup -cw",
-    "prepare": "husky"
+    "watch": "rollup -cw"
   },
   "devDependencies": {
     "@babel/core": "^7.24.4",
@@ -32,8 +31,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
     "postcss": "^8.4.38",
     "prettier": "^2.8.6",
     "rollup": "^4.14.0",
