Chore: RSC 지원을 위한 banner 추가

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "private": false,
   "scripts": {
     "build": "rollup -c",
-    "watch": "rollup -cw"
+    "watch": "rollup -cw",
+    "lint": "npx eslint src/* --fix"
   },
   "devDependencies": {
     "@babel/core": "^7.24.4",
