--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rollup": "^4.14.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
+    "style-inject": "^0.3.0",
     "typescript": "^5.4.3"
   },
   "peerDependencies": {
