--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.2.74",
+    "@types/style-inject": "^0.3.5",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^7.5.0",
     "babel-eslint": "^10.1.0",
