--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "node-sass": "^9.0.0",
     "postcss": "^8.4.38",
     "prettier": "^2.8.6",
     "rollup": "^4.14.0",
