--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.2.74",
-    "@types/style-inject": "^0.3.5",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^7.5.0",
     "babel-eslint": "^10.1.0",
@@ -31,18 +30,19 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "node-sass": "^9.0.0",
-    "postcss": "^8.4.38",
     "prettier": "^2.8.6",
     "rollup": "^4.14.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "style-inject": "^0.3.0",
+    "postcss": "^8.4.38",
     "typescript": "^5.4.3"
   },
   "peerDependencies": {
+    "@types/style-inject": "^0.3.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tslib": "^2.6.2",
+    "style-inject": "^0.3.0"
   },
   "dependencies": {
     "dayjs": "^1.11.10"
