--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-contribution-viewer",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "repository": "https://github.com/woohyun1031/react-contribution-viewer.git",
@@ -30,19 +30,19 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.38",
     "prettier": "^2.8.6",
     "rollup": "^4.14.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "postcss": "^8.4.38",
     "typescript": "^5.4.3"
   },
   "peerDependencies": {
     "@types/style-inject": "^0.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tslib": "^2.6.2",
-    "style-inject": "^0.3.0"
+    "style-inject": "^0.3.0",
+    "tslib": "^2.6.2"
   },
   "dependencies": {
     "dayjs": "^1.11.10"
