--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-contribution-viewer",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "repository": "https://github.com/woohyun1031/react-contribution-viewer.git",
@@ -38,13 +38,13 @@
     "typescript": "^5.4.3"
   },
   "peerDependencies": {
-    "@types/style-inject": "^0.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "style-inject": "^0.3.0",
     "tslib": "^2.6.2"
   },
   "dependencies": {
-    "dayjs": "^1.11.10"
+    "@types/style-inject": "^0.3.5",
+    "dayjs": "^1.11.10",
+    "style-inject": "^0.3.0"
   }
 }
