--- a/package.json
+++ b/package.json
@@ -21,13 +21,10 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
     "@types/react": "^18.2.74",
-    "@typescript-eslint/eslint-plugin": "^5.43.0",
-    "@typescript-eslint/parser": "^7.5.0",
-    "babel-eslint": "^10.1.0",
+    "@types/style-inject": "^0.3.5",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.37.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.38",
@@ -38,13 +35,12 @@
     "typescript": "^5.4.3"
   },
   "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tslib": "^2.6.2"
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
+    "tslib": "^1.8.1"
   },
   "dependencies": {
-    "@types/style-inject": "^0.3.5",
-    "dayjs": "^1.11.10",
-    "style-inject": "^0.3.0"
+    "style-inject": "^0.3.0",
+    "dayjs": "^1.11.10"
   }
 }
