--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-contribution-viewer",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "repository": "https://github.com/woohyun1031/react-contribution-viewer.git",
@@ -40,7 +40,7 @@
     "tslib": "^1.8.1"
   },
   "dependencies": {
-    "style-inject": "^0.3.0",
-    "dayjs": "^1.11.10"
+    "dayjs": "^1.11.10",
+    "style-inject": "^0.3.0"
   }
 }
