--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "scripts": {
     "build": "rollup -c",
     "watch": "rollup -cw",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "lint": "npx eslint src/* --fix"
   },
   "devDependencies": {
@@ -20,6 +22,8 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.6",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.74",
     "@types/style-inject": "^0.3.5",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
@@ -27,11 +31,15 @@
     "eslint": "^8.37.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.38",
     "prettier": "^2.8.6",
     "rollup": "^4.14.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
   },
   "peerDependencies": {
